# mhinprotocol

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  rust-toolchain.toml
.github/workflows/: release.yml  tests.yml
docs/: protocol.typ
src/: config.rs  helpers.rs  lib.rs  protocol.rs  store.rs  types.rs
