[package]
name = "zeldhash-protocol"
version = "0.5.0"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
description = "Reference Rust implementation of the ZELDHASH protocol."
repository = "https://github.com/ouziel-slama/zeldhash-protocol"
homepage = "https://zeldhash.com"
documentation = "https://docs.rs/zeldhash-protocol"
readme = "README.md"
keywords = ["bitcoin", "protocol", "zeldhash", "leading-zeros", "cryptocurrency"]
categories = ["cryptography::cryptocurrencies", "algorithms"]

[dependencies]
bitcoin = "0.32"
ciborium = "0.2"
serde = { version = "1.0", features = ["derive"] }
xxhash-rust = { version = "0.8", default-features = false, features = ["xxh3"] }
